--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 	<table>
 	<tr>
 		<th class="key1">Daniel Moreira</th>
-		<th class="key2">Paloma Villalva</th>
+		<th class="center key4">Paloma Villalva</th>
 	</tr>
 	<tr>
 		<td><img width="352" height="500" src="img/daniel.png">
@@ -88,11 +88,14 @@
 	</div>
 	<!--Aqui foram adicionados os links de curiosidade-->
 	<p><h6 class="center">Alguns links (para fins de curiosidade):</p>
-	<a href="pages/Calculadora + Cronômetro Java.html" target="_blank">Calculadora CSS + Cronômetro em Java Script</a><br>
+	<p><a href="pages/Calculadora + Cronômetro Java.html" target="_blank">Calculadora CSS + Cronômetro em Java Script</a><br>
 	<a href="pages/calculadorajava.html" target="_blank">Calculadora em Java Script</a><br>
+	<a href="pages/calculadora Java/index.html" target="_blank">Calculadora em Java Script nível 2</a><br>
 	<a href="pages/Snake.html" target="_blank">Snake Game (jogo da cobrinha)</a><br>
 	Colocamos esses links apenas para completar a tríade: <br>
-	<img height="410" width="400" src="img/triade.jpg" class="img2">
+	<img height="410" width="400" src="img/triade.jpg" class="img2"></p>
+	<a href="indexCSSinline.html" target="_blank"><h5>Assim que era nossa página em sua primeira versão.</a><br>
+	<a href="indexCSSinterno.html" target="_blank">Assim que era nossa página em sua segunda versão.</h5></a>
 	<h4 class="center">Obrigado por visitar a nossa página.</h4>
     </body>
 </html>
