--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 	<a href="pages/Snake.html" target="_blank">Snake Game (jogo da cobrinha)</a><br>
 	Colocamos esses links apenas para completar a tríade: <br>
 	<img height="410" width="400" src="img/triade.jpg" class="img2"></p>
-	<a href="indexCSSinline.html" target="_blank"><h5>Assim que era nossa página em sua primeira versão.</a><br>
-	<a href="indexCSSinterno.html" target="_blank">Assim que era nossa página em sua segunda versão.</h5></a>
+	<a href="indexCSSinline.html" target="_blank"><h5>Assim era a nossa página em sua primeira versão.</a><br>
+	<a href="indexCSSinterno.html" target="_blank">Assim era a nossa página em sua segunda versão.</h5></a>
 	<h4 class="center">Obrigado por visitar a nossa página.</h4>
     </body>
 </html>
