--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  </tr>
 	  <tr>
 	  <td><!--Exercício número 1 -->
-		Exemplos de cabeçalhos:
+		<h6>Exemplos de cabeçalhos:</h6>
         <h1>Header 1
         <h2>Header 2
         <h3>Header 3
@@ -63,6 +63,7 @@
 
 	<!--Aqui começa a tabela das nossas fotos.-->
 	<table>
+	<caption><h6 class="center">Apresentação de CSS desenvolvida por:</h4></caption>
 	<tr>
 		<th class="key1">Daniel Moreira</th>
 		<th class="center key4">Paloma Villalva</th>
@@ -79,7 +80,7 @@
     <!--Aqui começa a tag marquee-->
 	<div class="marquee-container">
 		<div class="marquee-content">
-			<h2>A tag &lt;marquee&gt; é obsoleta atualmente! <br> Atualmente em
+			<h2 class="center">A tag &lt;marquee&gt; é obsoleta atualmente! <br> Atualmente em
 				<img height="171" width="171" src="img/css.png"> existe a tag <br><dfn>@keyframes!</dfn><br>
 				Só que nos empolgamos <br>um pouquinho com essa tag!<br>
 				&#x1F923; &#x1F923; &#65039; &#128522; &#128512; &#128522; &#x1F923; &#x1F923;
@@ -87,15 +88,15 @@
 		</div>
 	</div>
 	<!--Aqui foram adicionados os links de curiosidade-->
-	<p><h6 class="center">Alguns links (para fins de curiosidade):</p>
+	<p><h6 class="center">Alguns links (para fins de curiosidade e para completar a tríade):</p>
 	<p><a href="pages/Calculadora + Cronômetro Java.html" target="_blank">Calculadora CSS + Cronômetro em Java Script</a><br>
 	<a href="pages/calculadorajava.html" target="_blank">Calculadora em Java Script</a><br>
 	<a href="pages/calculadora Java/index.html" target="_blank">Calculadora em Java Script nível 2</a><br>
 	<a href="pages/Snake.html" target="_blank">Snake Game (jogo da cobrinha)</a><br>
-	Colocamos esses links apenas para completar a tríade: <br>
 	<img height="410" width="400" src="img/triade.jpg" class="img2"></p>
-	<a href="indexCSSinline.html" target="_blank"><h5>Assim era a nossa página em sua primeira versão.</a><br>
+	<a href="indexCSSinline.html" target="_blank"><h5 class="center">Assim era a nossa página em sua primeira versão.</a><br>
 	<a href="indexCSSinterno.html" target="_blank">Assim era a nossa página em sua segunda versão.</h5></a>
+	<a href="https://danielbmoreira.github.io/musica/" target="_blank"><h2 class="center">Página de códigos e música</h2></td></a>
 	<h4 class="center">Obrigado por visitar a nossa página.</h4>
     </body>
 </html>
