--- a/index.html
+++ b/index.html
@@ -80,10 +80,10 @@
     <!--Aqui começa a tag marquee-->
 	<div class="marquee-container">
 		<div class="marquee-content">
-			<h2 class="center">A tag &lt;marquee&gt; é obsoleta atualmente! <br> Atualmente em
-				<img height="171" width="171" src="img/css.png"> existe a tag <br><dfn>@keyframes!</dfn><br>
-				Só que nos empolgamos <br>um pouquinho com essa tag!<br>
-				&#x1F923; &#x1F923; &#65039; &#128522; &#128512; &#128522; &#x1F923; &#x1F923;
+			<h2 class="center">A tag &lt;marquee&gt; está obsoleta atualmente! <br> Hoje em dia, em
+				<img height="171" width="171" src="img/css.png">, utilizamos a tag <br><dfn>@keyframes</dfn>,<br>
+				que é mais moderna e flexível<br>para criarmos animações!<br>
+				&#x1F600; &#65039; &#128522; &#x1F4AA; &#128522; &#x1F600;
 			</h2>
 		</div>
 	</div>
