--- a/pages/Calculadora + Cronômetro Java.html
+++ b/pages/Calculadora + Cronômetro Java.html
@@ -1,49 +1,39 @@
 <html>
 	<head>
+    <meta charset="UTF-8">
 		<title>Calculadora em HTML</title>
-		<style>
-			input, form {font-size: 36px;
-
-			}
-			form {
-				text-align: right;
-			}
-			body {
-  background-image: url("../img/7333590.gif");
-}
-#cronometro {
-        font-size: 48px;
-        text-align: left;
-      }
-		</style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<link rel="stylesheet" type="text/css" href="css/estilos.css">
 	</head>
-	<body text= "gold">
-		<h1 align="right">Calculadora:</h1>
-		<form name="calculator">
-	<input type="button" value="7" onClick="document.calculator.ans.value+='7'">
-	<input type="button" value="8" onClick="document.calculator.ans.value+='8'">
-	<input type="button" value="9" onClick="document.calculator.ans.value+='9'">
-	<input type="button" value="/" onClick="document.calculator.ans.value+='/'"><br>
-	<input type="button" value="4" onClick="document.calculator.ans.value+='4'">
-	<input type="button" value="5" onClick="document.calculator.ans.value+='5'">
-	<input type="button" value="6" onClick="document.calculator.ans.value+='6'">
-	<input type="button" value="*" onClick="document.calculator.ans.value+='*'"><br>
-	<input type="button" value="1" onClick="document.calculator.ans.value+='1'">
-	<input type="button" value="2" onClick="document.calculator.ans.value+='2'">
-	<input type="button" value="3" onClick="document.calculator.ans.value+='3'">
-	<input type="button" value="-" onClick="document.calculator.ans.value+='-'"><br>
-    <input type="button" value="0" onClick="document.calculator.ans.value+='0'">
-    <input type="button" value="." onClick="document.calculator.ans.value+='.'">
-	<input type="button" value="=" onClick="document.calculator.ans.value=eval(document.calculator.ans.value)">
-
-	<input type="button" value="+" onClick="document.calculator.ans.value+='+'"><br>
-		<input type="reset" value="Reset">
-
+	<body background="img/7333590.gif">
+  <div class="container">
+  	<div class="coluna">
+	  	<h1 class="center">Calculadora:</h1>
+  		<form name="calculator">
+      	<input type="button" value="7" onClick="document.calculator.ans.value+='7'">
+      	<input type="button" value="8" onClick="document.calculator.ans.value+='8'">
+      	<input type="button" value="9" onClick="document.calculator.ans.value+='9'">
+	      <input type="button" value="/" onClick="document.calculator.ans.value+='/'"><br>
+	      <input type="button" value="4" onClick="document.calculator.ans.value+='4'">
+	      <input type="button" value="5" onClick="document.calculator.ans.value+='5'">
+	      <input type="button" value="6" onClick="document.calculator.ans.value+='6'">
+	      <input type="button" value="*" onClick="document.calculator.ans.value+='*'"><br>
+	      <input type="button" value="1" onClick="document.calculator.ans.value+='1'">
+	      <input type="button" value="2" onClick="document.calculator.ans.value+='2'">
+	      <input type="button" value="3" onClick="document.calculator.ans.value+='3'">
+	      <input type="button" value="-" onClick="document.calculator.ans.value+='-'"><br>
+        <input type="button" value="0" onClick="document.calculator.ans.value+='0'">
+        <input type="button" value="." onClick="document.calculator.ans.value+='.'">
+      	<input type="button" value="=" onClick="document.calculator.ans.value=eval(document.calculator.ans.value)">
+      	<input type="button" value="+" onClick="document.calculator.ans.value+='+'"><br>
+		    <input type="reset" value="Reset">
 		<br>A solução é <input type="textfield" name="ans" value="">	
 		</form>
+    </div>
 		<br>
 	
 	<!--Próxima linha começa o cronômetro em Java Script-->
+	<div class="coluna">
 	<h1>Cronômetro:</h1>
     <div id="cronometro">00:00:00</div>
     <button onclick="iniciarCronometro()">Iniciar</button>
@@ -82,8 +72,8 @@
         segundos = 0;
         cronometro.textContent = "00:00:00";
       }
-    </script>
+    </script></div></div>
 
-	<h2 align="right"><p>Desenvolvido por <cite>Daniel B. Moreira</cite>.</p>
+	<h2 class="center"><p>Desenvolvido por <cite>Daniel B. Moreira</cite>.</p>
 	</body>
 </html>
