--- a/index.html
+++ b/index.html
@@ -71,11 +71,9 @@
 	<tr>
 		<td><img width="352" height="500" src="img/daniel.png">
 		</td>
-		<td><img width="429" height="500" src="img/paloma.png">
 	</tr>
 	<tr>
 		<td class="center"><a href="mailto:moreira.danielbueno@gmail.com">moreira.danielbueno@gmail.com</a></td>
-		<td class="center"><a href="mailto:lopespaloma326@gmail.com">lopespaloma326@gmail.com</a></td>
 	</tr></table>
     <!--Aqui começa a tag marquee-->
 	<div class="marquee-container">
@@ -95,7 +93,7 @@
 	<img height="410" width="400" src="img/triade.jpg" class="img2"></p>
 	<a href="indexCSSinline.html" target="_blank"><h5 class="center">Assim era a nossa página em sua primeira versão.</a><br>
 	<a href="indexCSSinterno.html" target="_blank">Assim era a nossa página em sua segunda versão.</h5></a>
-	<a href="https://danielbmoreira.github.io/apostila/" target="_blank"><h2 class="center">Apostila de HTML + CSS em HTML e PDF</h2></td></a>
+	<a href="https://dmoreiraprogramador.github.io/apostila/" target="_blank"><h2 class="center">Apostila de HTML + CSS em HTML e PDF</h2></td></a>
 	<h4 class="center">Obrigado por visitar a nossa página.</h4>
     </body>
 </html>
