--- a/indexCSSinline.html
+++ b/indexCSSinline.html
@@ -63,15 +63,13 @@
 	<font color="#04149d"> <!--Aqui começa a tabela dos contatos.-->
     <table align="center" border="2" style="font-size: 24px">
         <tr bgcolor="#b5f7b5">
-            <th colspan="2">Nosso contato:</th>
+            <th colspan="2">Meu contato:</th>
 		</tr>
         <tr>
 			<td>Daniel B. Moreira</td>
             <td><a href="mailto:moreira.danielbueno@gmail.com">moreira.danielbueno@gmail.com</a></td>
 		</tr>
 		<tr>
-            <td>Paloma Villalva</td>
-            <td><a href="mailto:lopespaloma326@gmail.com">lopespaloma326@gmail.com</a></td>
         </tr>
 	</table>
 	<br><br>
@@ -79,12 +77,9 @@
 	<table align="center" border="3" style="font-size: 20px">
 	<tr>
 		<th><h1>Daniel Moreira</th>
-		<th><h1>Paloma Villalva</th>
 	</tr>
 	<tr>
 		<td><img width="352" height="500" src="img/daniel.png">
-		</td>
-		<td><img width="429" height="500" src="img/paloma.png">
 		</td>
 	</tr></table>
     <!--Aqui começa a tag marquee-->
