--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
 	<!--Aqui começa a tabela das nossas fotos.-->
 	<table>
-	<caption><h6 class="center">Apresentação de CSS desenvolvida por:</h4></caption>
+	<caption><h6 class="center">Desenvolvido por:</h4></caption>
 	<tr>
 		<th class="key1">Daniel Moreira</th>
 	</tr>
